--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/chungharim/Documents/FullStack/BackEnd/01Developkits/ojdbc11.jar">
+	<classpathentry kind="lib" path="lib/ojdbc11.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
